(all) added comments for course support

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ DB_USERNAME="root"
 DB_NAME="mcp_api"
 DB_HOST="localhost"
 DB_PORT=3306
+# When working with MAMP / MAMP Pro if port-based access doesn't work,
+# use DB_SOCKET_PATH environment variable
 #DB_SOCKET_PATH="/Application/MAMP/tmp/mysql/mysql.sock"
 DB_DIALECT="mysql"
 
@@ -24,6 +26,7 @@ DB_DIALECT="mysql"
 # and port the HTTP API will bind itself to receive HTTP requests. Default
 # configuration is port 3000 and bind only on loopback interface, thus blocking
 # all connections from outside of your development machine. If you want to open
-# connection to remote clients, change HTTP_LISTEN_ADDR to 0.0.0.0
+# connection to remote clients, change HTTP_LISTEN_ADDR to 0.0.0.0, which is
+# the "special" IPv4 address meaning "ANY ADDRESS".
 HTTP_LISTEN_PORT=3000
 HTTP_LISTEN_ADDR=127.0.0.1
