--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,3 +1,5 @@
+//  This file contains the sequelize configuration, to be used with sequelize-cli.
+
 require('dotenv').config();
 require('module-alias/register');
 
